static/css/embedpress.css
/* ... */
.pip-mode .overlay-mask {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.pip-mode iframe {
    pointer-events: none !important;
}

[data-playerid] {
    opacity: 0;
}

[data-playerid].audio.plyr-initialized {
    opacity: 1;
}

.plyr--paused.plyr__poster-enabled .plyr__poster {
    display: block !important;
    opacity: 1;
    background-size: cover;
}

@media only screen and (max-width: 767px) {
    .plyr__controls [data-plyr="restart"], .plyr__controls [data-plyr="rewind"], .plyr__controls [data-plyr="fast-forward"], .plyr__controls [data-plyr="pip"] {
        display: none !important;
    }

    .plyr__video-wrapper iframe {
        max-height: 100% !important;
    }

    .plyr__controls .plyr__volume input[type=range] {
        max-width: 40px;
        min-width: 40px;
    }
}

/* Instagram profile info design  */
/* Base styles for the profile header */
.profile-header {
    display: flex;
    align-items: center;
    padding: 16px;
    border-bottom: 1px solid #ddd;
    justify-content: center;
    gap: 30px;
    padding-bottom: 30px;
}

/* Styling for the container holding the tabs */
.posts-tab-options {
    text-align: center;
    margin: 0;
}

/* Styling for the tabs */
.posts-tab-options .tabs {
    list-style: none;
    padding: 0;
    margin: 0;
    display: inline-flex;
    border-radius: 5px;
    gap: 25px;
    padding: 0;
}

.posts-tab-options .tabs svg {
    width: 15px;
    height: 15px;
}

li[data-media-type="ALL"] svg {
    width: 12px;
    height: 12px;
}

.posts-tab-options .tabs li {
    margin-right: 15px;
    cursor: pointer;
    padding: 10px 0;
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 500;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 6px;
}

.posts-tab-options .tabs li:last-child {
    margin-right: 0;
}

/* Styling for the active tab */
.posts-tab-options .tabs li.active {
    /* border-top: 1px solid rgb(115,115,115); */
    position: relative;
    color: rgb(115, 115, 115);

}

.posts-tab-options .tabs li svg {
    border-radius: 2px;
}

.posts-tab-options .tabs li.active svg {
    color: rgb(115, 115, 115);
}

.posts-tab-options .tabs li:hover, .posts-tab-options .tabs li:hover svg, .posts-tab-options .tabs li:hover .fill-color {
    color: rgb(115, 115, 115);
}

.posts-tab-options .tabs li:hover .fill-color, .posts-tab-options .tabs li.active .fill-color {
    fill: rgb(115, 115, 115) !important;
}

.posts-tab-options .tabs li.active::after {
    content: '';
    position: absolute;
    top: -1px;
    height: 1px;
    width: 100%;
    background-color: rgb(115, 115, 115);
    left: 0;
    right: 0;
}

/* Styles for the profile image and change photo button */
.profile-image {
    margin-right: 16px;
}

.posts-count {
    margin-right: 15px;
}

.profile-image img {
    width: 120px;
    height: 120px !important;
    object-fit: cover;
    border-radius: 50% !important;
    border: 3px solid #037bff;
}

.change-photo-button {
    background-color: transparent;
    border: none;
    cursor: pointer;
}

.change-photo-image {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    object-fit: cover;
}

/* Styles for the profile username and edit profile button */
.username-section {
    display: flex;
    align-items: center;
    margin-bottom: 8px;
}

.profile-link {
    text-decoration: none;
}

.username {
    font-size: 18px;
    font-weight: bold;
    margin-right: 12px;
}

.edit-profile-link {
    text-decoration: none;
    color: #3897f0;
    font-weight: bold;
}

/* Styles for the profile stats */
.profile-stats {
    display: flex;
    margin-bottom: 8px;
}

.stats-list {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
}

.stats-list li {
    margin-right: 24px;
    font-size: 14px;
}

/* Styles for the profile bio */
.bio-section {
    margin-bottom: 12px;
    text-align: left;
}

section.profile-details div:last-child {
    margin: 0;
}


.bio {
    font-size: 14px;
}

a.edit-profile-link {
    padding: 8px 15px;
    background: #efefef;
    text-decoration: none !important;
    border-radius: 7px;
    color: #222;
    font-size: 12px;
    font-weight: 500;
}

span.count {
    font-weight: 600;
}

a.followers-link {
    text-decoration: none !important;
}


/* Hover effect for the edit profile button */

a.profile-link, a.profile-link h2 {
    font-size: 20px;
    text-decoration: none !important;
    margin: 0;
    margin-right: 15px;
}

/* Instagram feed layout design */
.embedpress-insta-container {
    overflow: hidden;
    position: relative;
}

.ose-instagram-feed {
    max-height: 100% !important;
    height: 100% !important;
}


.insta-grid .embedpress-insta-container .insta-gallery, .insta-justify .ose-instagram-feed .insta-gallery {
    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    /* Set 3 columns */
    gap: 15px;
    grid-auto-flow: row;
    /* Ensure items flow in rows */
}


.insta-carousel .embedpress-insta-container .insta-gallery {
    grid-auto-columns: calc(25% + 0px);
    gap: 0px;
    left: 0px;
}

.insta-masonry .embedpress-insta-container .insta-gallery {
    column-count: 3;
    gap: .5em;
    margin: auto;
    width: 100%;
    display: inherit;
}


.insta-grid .embedpress-insta-container .insta-gallery-item {
    position: relative;
    color: #fff;
    cursor: pointer;
    height: 350px;
}

.embedpress-insta-container .insta-gallery-item:hover {
    cursor: pointer;
}

.insta-masonry .embedpress-insta-container .insta-gallery .insta-gallery-item {
    height: auto;
    margin-bottom: .5em;
}


.insta-masonry .embedpress-insta-container .insta-gallery .insta-gallery-item video.insta-gallery-image {
    height: 550px;
    margin-bottom: -13px;
}
/* ... */

